# l3_projet_svg

./: .gitignore  AVANCEMENT.md  CMakeLists.txt  LICENSE.md  Makefile  README.md
include/: XMLController.hpp  client.hpp  server.hpp  serverUI.hpp
src/: GTKClient.cpp  ServerUI.cpp  XMLController.cpp  XMLWindow.cpp  client.cpp  main.cpp  server.cpp  serverUI.cpp
